# 01_fractal-julia

./: CMakeLists.txt  README.md  fractal_omp.cpp  fractal_omp.h  fractal_serial.cpp  fractal_serial.h  fractal_simd.cpp  fractal_simd.h  main.cpp  palette.cpp
